package com.itbird.design.chaiin.demo;

/**
 * Created by itbird on 2022/3/1
 */
public class Request {
    public String getUrl() {
        return url;
    }

    public void setUrl(String url) {
        this.url = url;
    }

    String url;
}
