@startuml

title __DEMO's Class Diagram__\n

  namespace com.itbird.design {
    namespace chaiin {
      namespace demo {
        abstract class com.itbird.design.chaiin.demo.Handler {
            + setNext()
            ~ TAG()
            {abstract} ~ handlerRequeset()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace chaiin {
      namespace demo {
        class com.itbird.design.chaiin.demo.Request {
            ~ url : String
            + getUrl()
            + setUrl()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace chaiin {
      namespace demo {
        class com.itbird.design.chaiin.demo.RequestHandler1 {
            + handlerRequeset()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace chaiin {
      namespace demo {
        class com.itbird.design.chaiin.demo.RequestHandler2 {
            ~ handlerRequeset()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace chaiin {
      namespace demo {
        class com.itbird.design.chaiin.demo.RequestHandler3 {
            ~ handlerRequeset()
        }
      }
    }
  }
  

  com.itbird.design.chaiin.demo.Handler o-- com.itbird.design.chaiin.demo.Handler : next
  com.itbird.design.chaiin.demo.RequestHandler1 -up-|> com.itbird.design.chaiin.demo.Handler
  com.itbird.design.chaiin.demo.RequestHandler2 -up-|> com.itbird.design.chaiin.demo.Handler
  com.itbird.design.chaiin.demo.RequestHandler3 -up-|> com.itbird.design.chaiin.demo.Handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
